--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,24 @@
 			<version>3.3.2</version>
 		</dependency>
 
+
 		<!-- Jetty -->
+
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>11.0.22</version>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
 			<version>12.0.0.beta0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.jetty.websocket</groupId>
+			<artifactId>websocket-server</artifactId>
+			<version>9.4.55.v20240627</version>
 		</dependency>
 
 		<dependency>
