--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -192,6 +192,7 @@
 
 	<welcome-file-list>
 		<welcome-file>login.zul</welcome-file>
+		<welcome-file>h.zul</welcome-file>
 		<welcome-file>userView.zhtml</welcome-file>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
